Bug 468425 - Unversioned files aren't listed for commit when in unversioned directories
Summary: Unversioned files aren't listed for commit when in unversioned directories
Status: RESOLVED FIXED
Alias: None
Product: kdesvn
Classification: Applications
Component: General (other bugs)
Version First Reported In: GIT (master)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: wojnilowicz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-04-12 15:29 UTC by wojnilowicz
Modified: 2023-07-03 18:01 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description wojnilowicz 2023-04-12 15:29:55 UTC
STEPS TO REPRODUCE
1.  svn co svn://anonsvn.kde.org/home/kde/branches/stable/l10n-kf5/mt
2.  mkdir -p ./mt/messages/akonadi
3.  touch ./mt/messages/akonadi/libakonadi5.po
4.  start kdesvn
5.  open the "mt" directory downloaded in the first point
6.  press on the "Commit" button

OBSERVED RESULT
Only "messages/akonadi" listed.

EXPECTED RESULT
"messages/akonadi" and "messages/akonadi/libakonadi5.po" listed.

ADDITIONAL INFORMATION
Workaround is to select mt->messages->akonadi in the tree of the main app window and press on the "Add" button, then  "messages/akonadi/libakonadi5.po" gets also listed after pressing on the "Commit" button.
Comment 1 Bug Janitor Service 2023-04-12 15:41:17 UTC
A possibly relevant merge request was started @ https://invent.kde.org/sdk/kdesvn/-/merge_requests/13
Comment 2 wojnilowicz 2023-07-03 18:01:20 UTC
Git commit 1f2779941fe7dbb67a571167eb0ba2648d34302b by Łukasz Wojniłowicz.
Committed on 03/07/2023 at 18:00.
Pushed by wojnilowicz into branch 'master'.

Fix listing unversioned files in unversioned directories

If an unversioned file is in an unversioned directory, then only the
unversioned directory gets listed in the case of choosing files for a
commit. This patch fixes it.

M  +64   -4    src/svnfrontend/svnactions.cpp

https://invent.kde.org/sdk/kdesvn/-/commit/1f2779941fe7dbb67a571167eb0ba2648d34302b