Fix listing unversioned files in unversioned directories

If an unversioned file is in an unversioned directory, then only the
unversioned directory gets listed in the case of choosing files for a
commit. This patch fixes it.

BUG: 468425